--- a/index.html
+++ b/index.html
@@ -1,171 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Roleta DStreet</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://dstreetcompany.vercel.app/assets/bg-sacolas.jpg') no-repeat center center fixed;
-      background-size: cover;
-      position: relative;
-    }
-
-    body::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0.7);
-      backdrop-filter: blur(4px);
-      z-index: 0;
-    }
-
-    .container {
-      position: relative;
-      z-index: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      color: white;
-    }
-
-    .logo {
-      width: 150px;
-      margin-bottom: 20px;
-    }
-
-    .wheel {
-      width: 300px;
-      height: 300px;
-      border-radius: 50%;
-      border: 8px solid #fff;
-      position: relative;
-      overflow: hidden;
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-    }
-
-    .pointer {
-      width: 0; 
-      height: 0; 
-      border-left: 20px solid transparent;
-      border-right: 20px solid transparent;
-      border-bottom: 30px solid yellow;
-      position: absolute;
-      top: -30px;
-      left: calc(50% - 20px);
-      z-index: 2;
-    }
-
-    .wheel canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    .start-btn {
-      margin-top: 30px;
-      padding: 12px 24px;
-      background: #00ffe7;
-      color: black;
-      font-size: 20px;
-      font-weight: bold;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      box-shadow: 0 0 20px #00ffe7;
-      transition: 0.3s;
-    }
-
-    .start-btn:hover {
-      background: #fff;
-      color: #111;
-      box-shadow: 0 0 30px #00ffe7;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DStreet Roleta</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
-    <img src="https://dstreetcompany.vercel.app/assets/logo-dstreet.png" alt="DStreet Logo" class="logo">
-    <div class="pointer"></div>
-    <div class="wheel">
-      <canvas id="wheelCanvas" width="300" height="300"></canvas>
+    <h1 class="vegas-title">DSTREET</h1>
+    <img src="logo.png" alt="Logo DSTREET" class="logo" />
+    <p class="phrase">Gire e leve para casa até <strong>10 camisetas</strong>!</p>
+    <div class="rules">R$5 = 1 giro | R$10 = 3 giros | R$20 = 4 giros</div>
+
+    <div class="wheel-container">
+      <div class="pointer"></div>
+      <canvas id="wheel" width="500" height="500"></canvas>
+      <button id="spin">DSTREET</button>
     </div>
-    <button class="start-btn" onclick="spinWheel()">GIRAR</button>
+
+    <div id="result"></div>
+
+    <p class="note">* A cada 100 giros, 1 prêmio verdadeiro é sorteado.</p>
   </div>
 
-  <script>
-    const canvas = document.getElementById('wheelCanvas');
-    const ctx = canvas.getContext('2d');
-    const segments = [
-      'Ganhou 10 camisetas',
-      'Tente +1 vez',
-      'Ganhou 5 camisetas',
-      'Tente +1 vez',
-      'Ganhou 3 camisetas',
-      'Tente +1 vez'
-    ];
-    const colors = ['#000', '#1a1a1a'];
+  <audio id="tick-sound" src="tick.mp3" preload="auto"></audio>
+  <audio id="win-sound" src="win.mp3" preload="auto"></audio>
+  <audio id="lose-sound" src="lose.mp3" preload="auto"></audio>
 
-    let startAngle = 0;
-    const arc = Math.PI * 2 / segments.length;
-
-    function drawWheel() {
-      for (let i = 0; i < segments.length; i++) {
-        const angle = startAngle + i * arc;
-        ctx.beginPath();
-        ctx.fillStyle = colors[i % 2];
-        ctx.moveTo(150, 150);
-        ctx.arc(150, 150, 150, angle, angle + arc);
-        ctx.fill();
-
-        ctx.save();
-        ctx.fillStyle = "white";
-        ctx.translate(150, 150);
-        ctx.rotate(angle + arc / 2);
-        ctx.textAlign = "right";
-        ctx.font = "bold 14px sans-serif";
-        ctx.fillText(segments[i], 130, 5);
-        ctx.restore();
-      }
-    }
-
-    drawWheel();
-
-    function spinWheel() {
-      const spins = Math.floor(Math.random() * 3 + 4); // 4 to 6 full spins
-      const finalAngle = Math.random() * Math.PI * 2;
-      const totalRotation = Math.PI * 2 * spins + finalAngle;
-
-      let duration = 4000;
-      let start = null;
-
-      function animate(timestamp) {
-        if (!start) start = timestamp;
-        let progress = timestamp - start;
-        let angle = easeOut(progress, 0, totalRotation, duration);
-
-        ctx.clearRect(0, 0, 300, 300);
-        startAngle = angle;
-        drawWheel();
-
-        if (progress < duration) {
-          requestAnimationFrame(animate);
-        }
-      }
-
-      requestAnimationFrame(animate);
-    }
-
-    function easeOut(t, b, c, d) {
-      t /= d;
-      t--;
-      return c * (t * t * t + 1) + b;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
